force-app/main/default/objects/copado__Quality_Gate__c/copado__Quality_Gate__c.object-meta.xml
<CustomObject>
    <label>Quality Gate</label>
    <nameField>
        <label>Quality Gate Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quality Gates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>