force-app/main/default/objects/copado__Quality_Gate__c/fields/copado__Compliance_Rule_Group__c.field-meta.xml
<CustomField>
    <fullName>copado__Compliance_Rule_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>If &apos;Compliance Check&apos; is selected as the type, what Compliance Rule Group should be run?</description>
    <inlineHelpText>If &apos;Compliance Check&apos; is selected as the type, what Compliance Rule Group should be run?</inlineHelpText>
    <label>Compliance Rule Group</label>
    <referenceTo>copado__Compliance_Rule_Group__c</referenceTo>
    <relationshipLabel>Quality Gates</relationshipLabel>
    <relationshipName>Quality_Gates</relationshipName>
    <type>Lookup</type>
</CustomField>