force-app/main/default/objects/copado__Quality_Gate__c/fields/copado__Connection_Behavior__c.field-meta.xml
<CustomField>
    <fullName>copado__Connection_Behavior__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>What Connection Behavior is this Quality Gate attached to?</description>
    <inlineHelpText>What Connection Behavior is this Quality Gate attached to?</inlineHelpText>
    <label>Parent Connection Behavior</label>
    <referenceTo>copado__Connection_Behavior__c</referenceTo>
    <relationshipLabel>Quality Gates</relationshipLabel>
    <relationshipName>Quality_Gates</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>