force-app/main/default/objects/copado__Quality_Gate__c/fields/copado__Metadata_Group__c.field-meta.xml
<CustomField>
    <fullName>copado__Metadata_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>What metadata will trigger this Quality Gate to run? Quality Gates will only run on deployments where the metadata matches that the metadata in this group</description>
    <inlineHelpText>What metadata will trigger this Quality Gate to run? Quality Gates will only run on deployments where the metadata matches that the metadata in this group</inlineHelpText>
    <label>Metadata Group</label>
    <referenceTo>copado__Metadata_Group__c</referenceTo>
    <relationshipLabel>Applied to Quality Gates</relationshipLabel>
    <relationshipName>Quality_Gates</relationshipName>
    <type>Lookup</type>
</CustomField>